samples/_failures_safe/1761418322_86fd65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfbece81.c: In function ‘main’:
./samples/SAFE/__tmp_cfbece81.c:144:9: error: expected expression at end of input
  144 |         case
      |         ^~~~
./samples/SAFE/__tmp_cfbece81.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cfbece81.c:144:9: error: expected declaration or statement at end of input
